--- a/index.html
+++ b/index.html
@@ -40,30 +40,29 @@
         background-size: 400% 400%;
         animation: gradient-shift 15s ease infinite;
       }
-      /* Estilo para garantir que o app ocupe a tela toda no mobile */
       #root {
         height: 100%;
         display: flex;
         flex-direction: column;
       }
     </style>
-    <script type="importmap">
+  <script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@^19.2.3",
-    "react-dom": "https://esm.sh/react-dom@^19.2.3",
-    "react-dom/client": "https://esm.sh/react-dom@19.2.3/client",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.39.7",
-    "react/": "https://esm.sh/react@^19.2.3/",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/",
     "vite": "https://esm.sh/vite@^7.3.0",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.89.0",
+    "@google/genai": "https://esm.sh/@google/genai@^1.34.0"
   }
 }
 </script>
-  </head>
+</head>
   <body class="bg-animate">
     <div id="root"></div>
+    <!-- O script abaixo é essencial para o Vite e a Vercel carregarem seu App -->
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
