--- a/index.html
+++ b/index.html
@@ -45,6 +45,26 @@
         display: flex;
         flex-direction: column;
       }
+      /* Estilo customizado para o botão do Mercado Pago */
+      .mercadopago-button {
+        width: 100% !important;
+        background-color: #009EE3 !important;
+        color: white !important;
+        font-weight: 800 !important;
+        font-family: 'Inter', sans-serif !important;
+        text-transform: uppercase !important;
+        border-radius: 24px !important;
+        padding: 20px !important;
+        border: none !important;
+        box-shadow: 0 10px 30px rgba(0, 158, 227, 0.3) !important;
+        cursor: pointer !important;
+        transition: all 0.2s ease !important;
+        font-size: 12px !important;
+        letter-spacing: 0.05em !important;
+      }
+      .mercadopago-button:active {
+        transform: scale(0.96) !important;
+      }
     </style>
   <script type="importmap">
 {
